# cosmic-applet-package-updater

./: .gitignore  PKGBUILD  README.md
package-updater/: Cargo.toml
package-updater/src/: app.rs  config.rs  main.rs  updates.rs
