[package]
name = "cosmic-ext-applet-package-updater"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.93"
description = "COSMIC Package Updater Applet for Arch Linux"
authors = ["COSMIC Community"]

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
async-stream = "0.3"
notify = "8.2.0"
cosmic-config = { git = "https://github.com/pop-os/libcosmic.git", rev = "ef162b8e16ba4493e05c169cd56c7b9f77f0fda5" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "ef162b8e16ba4493e05c169cd56c7b9f77f0fda5"
default-features = false
features = ["applet", "tokio", "wayland", "autosize"]